--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,8 +39,16 @@
   padding: 1rem;
   border-radius: .3rem;
   cursor: pointer;
-  transition: 0.3s;
+  transition: .3s;
 }
 .btn:hover {
   background-color: var(--hover-color);
+}
+.input {
+  background-color: var(--secondary-color);
+  border: 1px solid var(--gray-color);
+  display: block;
+  padding: 1rem .5rem;
+  width: 100%;
+  border-radius: .3rem;
 }
